package org.apoorv.problems.parkinglot;

public class Car extends Vehicle{
    public Car(String vehicleNumber) {
        super(vehicleNumber);
    }
}
