package org.apoorv.problems.parkinglot;

public class MotorCycle extends Vehicle{
    public MotorCycle(String vehicleNumber) {
        super(vehicleNumber);
    }
}
