package org.apoorv.problems.parkinglot;

public interface PaymentStrategy {
    public void pay(double amount);
}
